infra/routes/authelia.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: auth
spec:
  hostnames: [auth.o5s.lol]
  parentRefs:
    - name: traefik-gateway
      namespace: network
  rules:
    - matches:
      - path:
          value: /
      backendRefs:
        - name: authelia
          port: 80
