infra/routes/bazarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
  hostnames: [bazarr.o5s.lol]
  rules:
    - matches:
      - path:
          value: /
      backendRefs:
        - name: bazarr
          port: 6767
