infra/routes/headlamp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: kube-system
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
  hostnames: [k8s.o5s.lol]
  rules:
    - matches:
      - path:
          value: /
      backendRefs:
        - name: headlamp
          port: 80
