infra/routes/homepage.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
  hostnames: [o5s.lol]
  rules:
    - matches:
      - path:
          value: /
      backendRefs:
        - name: homepage
          port: 3000
