infra/routes/jellyfin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames: [flix.o5s.lol]
  rules:
    - matches:
      - path:
          type: Exact
          value: /
      backendRefs:
        - name: jellyfin
          namespace: jellyfin
          port: 8096
