infra/routes/media.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: media
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
  hostnames: [flix.o5s.lol]
  rules:
    - matches:
        - path:
            value: /bazarr
      backendRefs:
        - name: bazarr
          port: 6767
    - matches:
        - path:
            value: /prowlarr
      backendRefs:
        - name: prowlarr
          port: 9696
    - matches:
        - path:
            value: /radarr
      backendRefs:
        - name: radarr
          port: 7878
    - matches:
        - path:
            value: /sonarr
      backendRefs:
        - name: sonarr
          port: 8989
    - matches:
        - path:
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
