infra/routes/prowlarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
  hostnames: [prowlarr.o5s.lol]
  rules:
    - matches:
      - path:
          value: /
      backendRefs:
        - name: prowlarr
          port: 9696
