infra/routes/radarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
  hostnames: [radarr.o5s.lol]
  rules:
    - matches:
      - path:
          value: /
      backendRefs:
        - name: radarr
          port: 8096
