infra/routes/sonarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
  hostnames: [sonarr.o5s.lol]
  rules:
    - matches:
      - path:
          value: /
      backendRefs:
        - name: sonarr
          port: 8989
