infra/routes/traefik-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames: [o5s.lol]
  rules:
    - matches:
      - path:
          value: /dashboard
      backendRefs:
        - name: traefik
          port: 8080
