infra/routes/weave-gitops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops
  namespace: weave-gitops
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames: [flux.o5s.lol]
  rules:
    - matches:
      - path:
          value: /
      backendRefs:
        - name: weave-gitops
          port: 9001
